--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deliveroo</title>
     <!-- StyleSheets -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="CSS\styles.css" />
   </head>
   <body>
     <!-- Preloader -->
