--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <header class="header">
-      <a href="/" class="logo">Delive<span class="yellow">roo</span></a>
+      <a href="/" class="logo">PRO<span class="yellow">MATO</span></a>
 
       <nav class="navbar">
         <a href="#home">Home</a>
@@ -34,11 +34,10 @@
     <!-- Home -->
     <section class="home" id="home">
       <div class="content">
-        <h1>Order Your Product <span class="yellow">Easier & Faster.</span></h1>
+        <h1>Order Your Product <span class="yellow">Easier & Faster get 50% OFF in every Order.</span></h1>
         <p>
-          Delivero is a leading global online food delivery marketplace,
-          connecting consumers and restaurants through its platform in 24
-          countries.
+          PROMATO Founds a loop hole in Online Food Dilevery.
+          And We Help by providing Discount in each Order Made from our Side. 
         </p>
         <a href="#" class="home-btn">Go to Menu</a>
       </div>
@@ -147,13 +146,13 @@
     <!-- App -->
     <section class="app" id="contact">
       <div class="image">
-        <img src="./images/splash with mobile.svg" alt="" />
+       
       </div>
       <div class="content">
         <h3>Place your order through our app</h3>
         <p>
-          You can easily place your order using our mobile app. Now you can
-          download our app for both IOS and Android mobiles.
+          You can easily place your order using our Website. Now you can
+          use our Website for both IOS and Android mobiles.
         </p>
         <div class="links">
           <img src="./images/app-store.png" alt="" />
@@ -166,7 +165,7 @@
     <footer class="footer">
       <div class="top">
         <div class="content">
-          <a href="" class="logo">Delive<span class="yellow">roo</span></a>
+          <a href="" class="logo">PRO<span class="yellow">MATO</span></a>
           <p>
             Lorem ipsum dolor sit amet,adipiscing elit. Eu, montes, metus
             porttitor consectetur pretium. Euismod imperdiet
@@ -178,11 +177,11 @@
             <h4>Contact Information</h4>
             <div>
               <img src="./images/location-cross.svg" alt="" />
-              <span>122,Albert St, Port Melbourne,Vic 3207.</span>
+              <span>Dhanrajgiri Hostel IIT BHU.</span>
             </div>
             <div>
               <img src="./images/sms-tracking.svg" alt="" />
-              <span>deliveroo@gmail.com</span>
+              <span>promato@gmail.com</span>
             </div>
           </div>
 
@@ -220,7 +219,7 @@
         </div>
       </div>
       <div class="bottom">
-        <p>Copyright © 2010-2021 Deliveroo Company S.L. All rights reserved.</p>
+        <p>Copyright © 2022-2023 PROMATO Company S.L. All rights reserved.</p>
       </div>
     </footer>
 
