--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Home -->
     <section class="home" id="home">
       <div class="content">
-        <h1>Order Your Product <span class="yellow">Easier & Faster get 50% OFF in every Order.</span></h1>
+        <h1>Order Your Product <span class="yellow">Easier & Faster get 50% OFF in every Order from Swiggy and Zomato.</span></h1>
         <p>
           PROMATO Founds a loop hole in Online Food Dilevery.
           And We Help by providing Discount in each Order Made from our Side. 
