--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
        
       </div>
       <div class="content">
-        <h3>Place your order through our app</h3>
+        <h3>Place your order through our Website.</h3>
         <p>
           You can easily place your order using our Website. Now you can
           use our Website for both IOS and Android mobiles.
